gen/webfonts/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-webfonts1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/webfonts/v1/lib)
error[E0277]: the trait bound `chrono::date::Date<chrono::offset::utc::Utc>: schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Deserialize<'_>` is not satisfied
  --> gen/webfonts/v1/lib/src/lib.rs:27:9
   |
27 |         #[doc = "The date (format \"yyyy-MM-dd\") the font was modified for the last time."]
   |         ^ the trait `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Deserialize<'_>` is not implemented for `chrono::date::Date<chrono::offset::utc::Utc>`
   |
   = note: required because of the requirements on the impl of `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Deserialize<'_>` for `std::option::Option<chrono::date::Date<chrono::offset::utc::Utc>>`
   = note: required by `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::de::SeqAccess::next_element`

error[E0277]: the trait bound `chrono::date::Date<chrono::offset::utc::Utc>: schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Deserialize<'_>` is not satisfied
  --> gen/webfonts/v1/lib/src/lib.rs:27:9
   |
27 |         #[doc = "The date (format \"yyyy-MM-dd\") the font was modified for the last time."]
   |         ^ the trait `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Deserialize<'_>` is not implemented for `chrono::date::Date<chrono::offset::utc::Utc>`
   |
   = note: required because of the requirements on the impl of `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Deserialize<'_>` for `std::option::Option<chrono::date::Date<chrono::offset::utc::Utc>>`
   = note: required by `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::de::MapAccess::next_value`

error[E0277]: the trait bound `chrono::date::Date<chrono::offset::utc::Utc>: schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Serialize` is not satisfied
  --> gen/webfonts/v1/lib/src/lib.rs:27:9
   |
27 |         #[doc = "The date (format \"yyyy-MM-dd\") the font was modified for the last time."]
   |         ^ the trait `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Serialize` is not implemented for `chrono::date::Date<chrono::offset::utc::Utc>`
   |
   = note: required because of the requirements on the impl of `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::Serialize` for `std::option::Option<chrono::date::Date<chrono::offset::utc::Utc>>`
   = note: required by `schemas::_IMPL_SERIALIZE_FOR_Webfont::_serde::ser::SerializeStruct::serialize_field`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
error: Could not compile `google-webfonts1`.

To learn more, run the command again with --verbose.
